[package]
name = "micro_engine"
version = "0.1.0"
authors = ["Duncan Freeman <dfreeman@lucidyne.com>"]
edition = "2018"

[dependencies]
watertender = { path = "../watertender" }
mlua = { version = "0.5", features = ["lua54", "vendored"] }
anyhow = "1"
shaderc = "0.7"
bytemuck = "1.5"
slotmap = "1.0"
rustyline = "7.1"
notify = "5.0.0-pre.8"
